<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.main.DayFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/algoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="25sp"
            android:textColor="@color/purple_700"
            android:gravity="center"
            android:text="@string/algorithm"/>

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:minHeight="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/purple_500">

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/article"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:linksClickable="true"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:minHeight="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/purple_500">

            <TextView
                android:id="@+id/easyProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/easy_problem"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:linksClickable="true"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:minHeight="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/purple_500">

            <TextView
                android:id="@+id/medProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/medium_problem"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:linksClickable="true"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:minHeight="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/purple_500">

            <TextView
                android:id="@+id/hardProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hard_problem"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:linksClickable="true"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
