<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    android:minHeight="70dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/purple_500">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                app:cardCornerRadius="3dp">

                <TextView
                    android:id="@+id/algostatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/not_started"
                    android:textSize="12sp"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:textColor="@color/purple_500" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                app:cardCornerRadius="3dp">

                <TextView
                    android:id="@+id/algolevel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/easy"
                    android:textSize="12sp"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:textColor="@color/purple_500" />

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <TextView
            android:id="@+id/algoname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>